Revision history for Cache

0.08 in progress
 - added the auto_purge option and property to the base cache interface
   and implementations.  This option will call the purge method on
   the cache after the specified interval expires
 - renamed _set_namepsace to set_namespace (i.e., made it public)
 - updated the test scripts and CREDITS file
 - updated the perldoc formatting to look better in HTML
 - removed the $VERSION from SizeAwareCache
 - started version 0.08

0.07 2000-03-27-08-55
 - released version 0.07
 - prepared for initial CPAN release
 - improved Cache::Cache documentation
 - removed last "use IPC::Shareable" 
 - added support in the Makefile.PL to conditionally build the
   SharedMemoryCache, which requires IPC::ShareLite, and thus runs only
   on certain architectures.  Also broke out the IPC related routines
   into the SharedCacheUtils package.
 - started version 0.07

0.06 2000-03-23-08-36
 - release version 0.06
 - added the get_identifiers method to the Cache interface, implemented
   the method for all classes, added a new test, and updated the test 
   scripts
 - added the size property to Object
 - added the _freeze and _thaw methods to the BaseCache class and
   modified all children classes to use them
 - revert to separate freeze and thaws on the memory based caches to
   ensure that cached data isn't modified at any time
 - major rewrite of the size aware cache logic
 - added the CacheMetaData class, which is used to efficiently keep track
   of a size aware cache state
 - refactored the instance specific limit_size routines into the
   generic Limit_Size method in CacheUtils
 - updated the size aware cache implementations to use the CacheMetaData
   and Limit_Size methods
 - improved the SizeAwareCacheTester and updated the test scripts
 - removed unnecessary clone call from the SharedMemoryCache and the
   SizeAwareSharedMemoryCache
 - added exclusive locking on the shared cache for operations that