@@ -1,5 +1,5 @@
 ######################################################################
-# $Id: BaseCache.pm,v 1.5 2001/04/08 22:48:37 dclinton Exp $
+# $Id: BaseCache.pm,v 1.6 2001/04/24 15:18:14 dclinton Exp $
 # Copyright (C) 2001 DeWitt Clinton  All Rights Reserved
 #
 # Software distributed under the License is distributed on an "AS
@@ -14,9 +14,10 @@ package Cache::BaseCache;
 
 use strict;
 use vars qw( @ISA );
-use Cache::Cache qw( $SUCCESS $FAILURE $EXPIRES_NEVER );
-use Cache::CacheUtils qw( Freeze_Object
-                          Reset_Auto_Purge
+use Cache::Cache qw( $SUCCESS $FAILURE $EXPIRES_NEVER $TRUE $FALSE);
+use Cache::CacheUtils qw( Build_Object
+                          Freeze_Object
+                          Object_Has_Expired
                           Thaw_Object
                         );
 use Carp;
@@ -27,6 +28,14 @@ use Carp;
 
 my $DEFAULT_EXPIRES_IN = $EXPIRES_NEVER;
 my $DEFAULT_NAMESPACE = "Default";
+my $DEFAULT_AUTO_PURGE_ON_SET = $FALSE;
+my $DEFAULT_AUTO_PURGE_ON_GET = $FALSE;
+
+
+# namespace that stores the keys used for the auto purge functionality
+
+my $AUTO_PURGE_NAMESPACE = "__AUTO_PURGE__";
+
 
 
 ##
@@ -66,8 +75,14 @@ sub _initialize_base_cache
   $self->_initialize_default_expires_in( ) or
     croak( "Couldn't initialize default expires in" );
 
-  $self->_initialize_auto_purge( ) or
-    croak( "Couldn't initialize auto purge" );
+  $self->_initialize_auto_purge_interval( ) or
+    croak( "Couldn't initialize auto purge interval" );
+
+  $self->_initialize_auto_purge_on_set( ) or
+    croak( "Couldn't initialize auto purge on set" );
+
+  $self->_initialize_auto_purge_on_get( ) or
+    croak( "Couldn't initialize auto purge on get" );
 
   return $SUCCESS;
 }
@@ -108,16 +123,44 @@ sub _initialize_default_expires_in
 }
 
 
-sub _initialize_auto_purge
+sub _initialize_auto_purge_interval
 {
   my ( $self ) = @_;
 
-  my $auto_purge = $self->_read_option( 'auto_purge' );
+  my $auto_purge_interval = $self->_read_option( 'auto_purge_interval' );
 
-  if ( defined $auto_purge )
+  if ( defined $auto_purge_interval )
   {
-    $self->set_auto_purge( $auto_purge );
+    $self->set_auto_purge_interval( $auto_purge_interval );
+
+    $self->_auto_purge( );
   }
+
+  return $SUCCESS;
+}
+
+
+sub _initialize_auto_purge_on_set
+{
+  my ( $self ) = @_;
+
+  my $auto_purge_on_set =
+    $self->_read_option( 'auto_purge_on_set', $DEFAULT_AUTO_PURGE_ON_SET );
+
+  $self->set_auto_purge_on_set( $auto_purge_on_set );
+
+  return $SUCCESS;
+}
+
+
+sub _initialize_auto_purge_on_get
+{
+  my ( $self ) = @_;
+
+  my $auto_purge_on_get =
+    $self->_read_option( 'auto_purge_on_get', $DEFAULT_AUTO_PURGE_ON_GET );
+
+  $self->set_auto_purge_on_get( $auto_purge_on_get );
 
   return $SUCCESS;
 }
@@ -184,6 +227,121 @@ sub _thaw
 }
 
 
+
+# this method checks to see if the auto_purge property is set for a
+# particular cache.  If it is, then it switches the cache to the
+# $AUTO_PURGE_NAMESPACE and stores that value under the name of the
+# current cache namespace
+
+sub _reset_auto_purge_interval
+{
+  my ( $self ) = @_;
+
+  my $auto_purge_interval = $self->get_auto_purge_interval( );
+
+  return $SUCCESS if not defined $auto_purge_interval;
+
+  return $SUCCESS if $auto_purge_interval eq $EXPIRES_NEVER;
+
+  my $namespace = $self->get_namespace( ) or
+    croak( "Couldn't get namespace" );
+
+  $self->set_namespace( $AUTO_PURGE_NAMESPACE ) or
+    croak( "Couldn't set auto purge namespace to $AUTO_PURGE_NAMESPACE" );
+
+  if ( not defined $self->get( $namespace ) )
+  {
+    my $object =
+      Build_Object( $namespace, 1, $auto_purge_interval, undef ) or
+        croak( "Couldn't build cache object" );
+
+    $self->set_object( $namespace, $object ) or
+      croak( "Couldn't set_object( $namespace, $object )" );
+  }
+
+  $self->set_namespace( $namespace ) or
+    croak( "Couldn't set namespace to $namespace" );
+
+  return $SUCCESS;
+}
+
+
+
+
+
+# this method checks to see if the auto_purge property is set, and if
+# it is, switches to the $AUTO_PURGE_NAMESPACE and sees if a value
+# exists at the location specified by a key named for the current
+# namespace.  If that key doesn't exist, then the purge method is
+# called on the cache
+
+sub _auto_purge
+{
+  my ( $self ) = @_;
+
+  my $auto_purge_interval = $self->get_auto_purge_interval( );
+
+  return $SUCCESS if not defined $auto_purge_interval;
+
+  return $SUCCESS if $auto_purge_interval eq $EXPIRES_NEVER;
+
+  my $namespace = $self->get_namespace( ) or
+    croak( "Couldn't get namespace" );
+
+  $self->set_namespace( $AUTO_PURGE_NAMESPACE ) or
+    croak( "Couldn't set auto purge namespace to $AUTO_PURGE_NAMESPACE" );
+
+  my $auto_purge_object = $self->get_object( $namespace );
+
+  $self->set_namespace( $namespace ) or
+    croak( "Couldn't set namespace to $namespace" );
+
+  if ( ( not defined $auto_purge_object ) or
+       ( Object_Has_Expired ( $auto_purge_object ) ) )
+  {
+    $self->purge( ) or
+      croak( "Couldn't purge" );
+
+    $self->_reset_auto_purge_interval( ) or
+      croak( "Couldn't reset auto purge interval" );
+  }
+
+  return $SUCCESS;
+}
+
+
+# call auto_purge if the auto_purge_on_set option is true
+
+sub _conditionally_auto_purge_on_set
+{
+  my ( $self ) = @_;
+
+  if ( $self->get_auto_purge_on_set( ) )
+  {
+    $self->_auto_purge( ) or
+      croak( "Couldn't auto purge" );
+  }
+
+  return $SUCCESS;
+}
+
+
+# call auto_purge if the auto_purge_on_get option is true
+
+sub _conditionally_auto_purge_on_get
+{
+  my ( $self ) = @_;
+
+  if ( $self->get_auto_purge_on_get( ) )
+  {
+    $self->_auto_purge( ) or
+      croak( "Couldn't auto purge" );
+  }
+
+  return $SUCCESS;
+}
+
+
 ##
 # Instance properties
 ##
@@ -237,23 +395,56 @@ sub _set_default_expires_in
 }
 
 
-sub get_auto_purge
+sub get_auto_purge_interval
 {
   my ( $self ) = @_;
 
-  return $self->{_Auto_Purge};
+  return $self->{_Auto_Purge_Interval};
 }
 
 
-sub set_auto_purge
+sub set_auto_purge_interval
 {
-  my ( $self, $auto_purge ) = @_;
+  my ( $self, $auto_purge_interval ) = @_;
 
-  $self->{_Auto_Purge} = $auto_purge;
+  $self->{_Auto_Purge_Interval} = $auto_purge_interval;
 
-  Reset_Auto_Purge( $self ) or
-    croak( "Couldn't reset auto purge" );
+  $self->_reset_auto_purge_interval( ) or
+    croak( "Couldn't reset auto purge interval" );
 }
+
+
+sub get_auto_purge_on_set
+{
+  my ( $self ) = @_;
+
+  return $self->{_Auto_Purge_On_Set};
+}
+
+
+sub set_auto_purge_on_set
+{
+  my ( $self, $auto_purge_on_set ) = @_;
+
+  $self->{_Auto_Purge_On_Set} = $auto_purge_on_set;
+}
+
+
+sub get_auto_purge_on_get
+{
+  my ( $self ) = @_;
+
+  return $self->{_Auto_Purge_On_Get};
+}
+
+
+sub set_auto_purge_on_get
+{
+  my ( $self, $auto_purge_on_get ) = @_;
+
+  $self->{_Auto_Purge_On_Get} = $auto_purge_on_get;
+}
+
 
 1;
 
